# event-processor

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tasks.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yaml  codeql-analysis.yml  release.yaml
docs/: code.rst  conf.py  index.rst
docs/content/: changelog.rst  code.rst  core_concepts.rst  dependencies.rst  dependency_injection_guide.rst  filtering_guide.rst  filters.rst  pre_processing_guide.rst  processors.rst  public_api.rst  quick_start.rst  testing.rst  testing_processors.rst
docs/content/shared/: full_example.rst
examples/: run_examples.py
examples/database_usage/: README.md  database.py  main.py  models.py  passwords.py
examples/lambda_api/: README.md  api_response.py  main.py
src/event_processor/: __init__.py  dependencies.py  error_handling_strategies.py  event_processor.py  exceptions.py  filters.py  invocation_strategies.py  main.py  pre_processors.py  processor.py  processor_decorator.py  processor_invoker.py  result.py  state.py  util.py
src/tests/: test_dependencies.py  test_end_to_end.py  test_error_handling_strategies.py  test_event_processor.py  test_exceptions.py  test_filters.py  test_invocation_strategies.py  test_main.py  test_pre_processors.py  test_processor_decorator.py  test_processor_invoker.py  test_result.py  test_util.py
src/tests/package_for_tests/: README.md
