[tool.poetry]
name = "event-processor"
version = "3.1.3"
description = "Pythonic event-processing library based on decorators"
authors = ["Nicolas Marier <software@nmarier.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = { version = ">= 1.8.2, < 2.0", optional = true }

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pydantic = ">= 1.8.2, < 2.0"
pytest = "*"
pytest-cov = "*"
sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
